syntax = "proto3";

package api;

option go_package = "./;api";

message RequestLogin {
  string userName = 1;
  string password = 2;
  string sessionKey = 3;
}

message ResponseLogin {
  string sessionKey = 1;
}

service Authentication {
  rpc SignUp(RequestLogin) returns (ResponseLogin) {}
  rpc SignIn(RequestLogin) returns (ResponseLogin) {}
}